--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,7 +23,9 @@
 
             <div class="grid-33">
 
-              <a href="{{ url_for('index') }}" class="logo">FaceSmash</a>
+                <a href="{{ url_for('index') }}" class="logo">FaceSmash</a><br>
+                <a href="{{ url_for('nosotros') }}" class="logo">Nosotros</a><br>
+                <a href="{{ url_for('contacto') }}" class="logo">Contacto</a>
 
             </div>
 
@@ -70,7 +72,7 @@
 
                 {% if current_user.is_authenticated %}
 	                <a href="{{ url_for('stream', username=current_user.username) }}">Siguiendo</a>
-	                <a href="{{ url_for('post') }}" class="new">Nuevo Post</a>
+	                <a href="{{ url_for('post')}}" class="new">Nuevo Post</a>
                 {% endif %}
 
             </nav>
@@ -87,7 +89,7 @@
 
           <div class="row">
 
-            <p>Todos los derechos reservados</a></p>
+            <p>Todos los derechos reservados</p>
 
           </div>
 
