--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -2,6 +2,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+    <h1>Yair Guadalupe Lizarraga Valenzuela - Ing. en Sistemas Computacionales</h1>
     <h1>Christian Ramirez de Leon - Ing. en Sistemas Computacionales</h1>
     <h1>Joel Eduardo Rivera Lopez - Ing. en Sistemas Computacionales</h1>
     <h1>Neil Pardo Ward - Ing. en Sistemas Computacionales</h1>
